--- a/AmongUsShadowSlime/feedback.html
+++ b/AmongUsShadowSlime/feedback.html
@@ -3,179 +3,189 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <title>Feedback Form</title>
+    <title>Shadow Slime Feedback</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@700;900&display=swap" rel="stylesheet">
     <style>
         :root {
-            --pink: hsl(338, 70%, 55%);
-            --teal: hsl(183, 70%, 62%);
-            --white: hsl(334, 7%, 95%);
-            --purple: #9b59b6;
-            --gray: #bdc3c7;
-            --hover-bright: brightness(1.2);
+            --shadow-bg: #12001a;
+            --shadow-card: rgba(34, 0, 51, 0.92);
+            --shadow-border: #2e0047;
+            --neon-pink: #ff4ecd;
+            --neon-blue: #6c5ce7;
+            --deep-purple: #2e0047;
+            --white: #f8f8fa;
+            --glass: rgba(34, 0, 51, 0.85);
         }
-        /* General reset and style */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        html, body { height: 100%; }
         body {
-            background: hsl(224, 32%, 12%);
-            background-image: conic-gradient(
-                from 0deg at 50% 50%,
-                blue,
-                purple,
-                purple,
-                blue
-            );
-            background-blend-mode: multiply;
-            min-block-size: 100dvh;
-            display: grid;
-            place-items: center;
-            overflow: hidden; 
-            opacity: 0; 
-            animation: fadeIn 2s forwards; 
-            font-family: 'Poppins', sans-serif; 
+            min-height: 100vh;
+            background: linear-gradient(120deg, #1a0033 0%, #2e0047 40%, #0a0a23 100%);
+            background-size: 200% 200%;
+            animation: gradientMove 16s ease-in-out infinite;
+            color: var(--white);
+            font-family: 'Inter', 'Poppins', Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
         }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+        @keyframes gradientMove {
+            0% {background-position: 0% 50%;}
+            50% {background-position: 100% 50%;}
+            100% {background-position: 0% 50%;}
         }
         svg {
-		position: absolute;
-		top: 0;
-		left: 0;
-         width: 100%;
-         height: 100%;
-		box-sizing: border-box;
-		display: block;
-		background-color: purple;
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.86), #240027);
-	    }
-        /* Card style for feedback box */
+            position: fixed;
+            top: 0; left: 0;
+            width: 100vw; height: 100vh;
+            z-index: 0;
+            pointer-events: none;
+        }
+        .back-button {
+            position: absolute;
+            top: 32px;
+            left: 32px;
+            background: linear-gradient(90deg, var(--neon-blue), var(--neon-pink));
+            color: var(--white);
+            padding: 10px 22px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-size: 1.1em;
+            font-family: 'Poppins', Arial, sans-serif;
+            font-weight: 600;
+            box-shadow: 0 0 16px var(--neon-blue), 0 0 32px var(--neon-pink);
+            border: none;
+            transition: background 0.2s, box-shadow 0.2s, transform 0.2s;
+            z-index: 2;
+        }
+        .back-button:hover {
+            background: linear-gradient(90deg, var(--neon-pink), var(--neon-blue));
+            box-shadow: 0 0 32px var(--neon-pink), 0 0 48px var(--neon-blue);
+            transform: scale(1.07);
+        }
         .feedback-container {
             width: 100%;
-            max-width: 400px;
-            background: #6f00ff;
-            padding: 2em;
-            border-radius: 12px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+            max-width: 420px;
+            background: var(--glass);
+            padding: 2.5em 2em 2em 2em;
+            border-radius: 22px;
+            box-shadow: 0 0 40px var(--neon-blue), 0 0 80px var(--deep-purple);
             position: relative;
             z-index: 1;
+            border: 2.5px solid;
+            border-image: linear-gradient(120deg, var(--neon-blue), var(--neon-pink), var(--deep-purple)) 1;
+            animation: borderGlow 3s infinite alternate;
+            backdrop-filter: blur(10px) saturate(160%);
         }
-
-        /* Title */
+        @keyframes borderGlow {
+            from { box-shadow: 0 0 40px var(--neon-blue), 0 0 80px var(--deep-purple);}
+            to   { box-shadow: 0 0 80px var(--neon-pink), 0 0 120px var(--neon-blue);}
+        }
         h1 {
-            font-size: 1.5em;
-            margin-bottom: 1em;
-            color: #ffffff; 
-            text-align: center;
-        }
-
-        /* Input styles */
-        .form-group {
+            font-size: 2.1em;
             margin-bottom: 1.2em;
+            color: var(--neon-blue);
+            text-align: center;
+            font-family: 'Poppins', Arial, sans-serif;
+            text-shadow: 0 0 24px var(--neon-pink), 0 0 48px var(--deep-purple);
+            letter-spacing: 2px;
+            font-weight: 900;
         }
-
+        .form-group { margin-bottom: 1.3em; }
         label {
             display: block;
             margin-bottom: 0.5em;
-            color: #ffffff; 
+            color: var(--white);
             font-weight: bold;
+            font-family: 'Poppins', Arial, sans-serif;
+            letter-spacing: 1px;
         }
-
         input[type="text"], textarea {
             width: 100%;
-            padding: 0.8em;
-            border: 1px solid #ddd;
-            border-radius: 6px;
+            padding: 0.9em;
+            border: 1.5px solid var(--neon-blue);
+            border-radius: 8px;
             font-size: 1em;
+            background: rgba(30,0,40,0.7);
+            color: var(--white);
             outline: none;
-            transition: border-color 0.2s;
+            transition: border-color 0.2s, box-shadow 0.2s;
+            font-family: 'Inter', Arial, sans-serif;
+            box-shadow: 0 0 8px var(--deep-purple);
         }
-
         input[type="text"]:focus, textarea:focus {
-            border-color: #ffffff; 
+            border-color: var(--neon-pink);
+            box-shadow: 0 0 16px var(--neon-pink);
         }
-
         textarea {
             resize: vertical;
             min-height: 100px;
         }
-
-        /* Submit button */
         .submit-btn {
             width: 100%;
-            padding: 0.8em;
-            background-color: #ffffff; 
+            padding: 1em;
+            background: linear-gradient(90deg, var(--neon-blue), var(--neon-pink));
             border: none;
-            color: #6f00ff; 
-            border-radius: 6px;
-            font-size: 1em;
+            color: var(--white);
+            border-radius: 8px;
+            font-size: 1.1em;
+            font-family: 'Poppins', Arial, sans-serif;
+            font-weight: 700;
             cursor: pointer;
-            transition: background-color 0.2s;
+            box-shadow: 0 0 16px var(--neon-blue), 0 0 32px var(--neon-pink);
+            transition: background 0.2s, box-shadow 0.2s, transform 0.2s;
+            margin-top: 0.5em;
         }
-
         .submit-btn:hover {
-            background-color: #e0e0e0; 
+            background: linear-gradient(90deg, var(--neon-pink), var(--neon-blue));
+            box-shadow: 0 0 32px var(--neon-pink), 0 0 48px var(--neon-blue);
+            transform: scale(1.04);
         }
-
         .success-message, .error-message {
             display: none;
             padding: 1em;
-            border-radius: 6px;
+            border-radius: 8px;
             margin-top: 1em;
             text-align: center;
+            font-weight: bold;
+            font-family: 'Inter', Arial, sans-serif;
         }
-
         .success-message {
-            background-color: #d4edda;
-            color: #155724;
+            background: rgba(108, 92, 231, 0.15);
+            color: var(--neon-blue);
+            border: 1.5px solid var(--neon-blue);
+            box-shadow: 0 0 16px var(--neon-blue);
         }
-
         .error-message {
-            background-color: #f8d7da;
-            color: #721c24;
+            background: rgba(255, 78, 205, 0.15);
+            color: var(--neon-pink);
+            border: 1.5px solid var(--neon-pink);
+            box-shadow: 0 0 16px var(--neon-pink);
         }
-
-        .back-button {
-            position: absolute;
-            top: 20px; /* Distance from the top */
-            right: 20px; /* Distance from the right */
-            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white */
-            color: #333; /* Text color */
-            padding: 10px 15px; /* Padding around the text */
-            border-radius: 5px; /* Rounded corners */
-            text-decoration: none; /* Remove underline from link */
-            font-size: 1em; /* Font size */
-            transition: background-color 0.2s; /* Smooth background change on hover */
-            z-index: 2; /* Ensure button is above other elements */
+        @media (max-width: 600px) {
+            .feedback-container { padding: 1.2em 0.5em; max-width: 98vw; }
+            h1 { font-size: 1.2em; }
+            .back-button { top: 10px; left: 10px; font-size: 0.95em; padding: 7px 12px;}
         }
-
-        .back-button:hover {
-            background-color: rgba(255, 255, 255, 1); /* Solid white on hover */
-        }
-
     </style>
 </head>
 <body>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-		xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 1600 900" preserveAspectRatio="xMidYMax slice">
-		<defs>
-			<linearGradient id="bg">
-				<stop offset="0%" style="stop-color:rgba(40, 20, 97, 0.041)"></stop>
-				<stop offset="50%" style="stop-color:rgba(27, 8, 78, 0.6)"></stop>
-				<stop offset="100%" style="stop-color:rgba(59, 0, 15, 0.082)"></stop>
-			</linearGradient>
-			<path id="wave" fill="url(#bg)" d="M-363.852,502.589c0,0,236.988-41.997,505.475,0
-	s371.981,38.998,575.971,0s293.985-39.278,505.474,5.859s493.475,48.368,716.963-4.995v560.106H-363.852V502.589z" />
-		</defs>
-		<g>
-			<use xlink:href='#wave' opacity=".3">
-				<animateTransform
+        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 1600 900" preserveAspectRatio="xMidYMax slice">
+        <defs>
+            <linearGradient id="bg">
+                <stop offset="0%" style="stop-color:rgba(40, 20, 97, 0.041)"></stop>
+                <stop offset="50%" style="stop-color:rgba(27, 8, 78, 0.6)"></stop>
+                <stop offset="100%" style="stop-color:rgba(59, 0, 15, 0.082)"></stop>
+            </linearGradient>
+            <path id="wave" fill="url(#bg)" d="M-363.852,502.589c0,0,236.988-41.997,505.475,0
+    s371.981,38.998,575.971,0s293.985-39.278,505.474,5.859s493.475,48.368,716.963-4.995v560.106H-363.852V502.589z" />
+        </defs>
+        <g>
+            <use xlink:href='#wave' opacity=".3">
+                <animateTransform
           attributeName="transform"
           attributeType="XML"
           type="translate"
@@ -185,9 +195,9 @@
           keyTimes="0; .5; 1"
           keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
           repeatCount="indefinite" />
-			</use>
-			<use xlink:href='#wave' opacity=".6">
-				<animateTransform
+            </use>
+            <use xlink:href='#wave' opacity=".6">
+                <animateTransform
           attributeName="transform"
           attributeType="XML"
           type="translate"
@@ -197,9 +207,9 @@
           keyTimes="0; .6; 1"
           keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
           repeatCount="indefinite" />
-			</use>
-			<use xlink:href='#wave' opacty=".9">
-				<animateTransform
+            </use>
+            <use xlink:href='#wave' opacity=".9">
+                <animateTransform
           attributeName="transform"
           attributeType="XML"
           type="translate"
@@ -209,13 +219,12 @@
           keyTimes="0; .4; 1"
           keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
           repeatCount="indefinite" />
-			</use>
-		</g>
-	</svg>
+            </use>
+        </g>
+    </svg>
     <a href="https://jogamerforgames2021.github.io/AmongUsShadowSlime/MainPage.html" class="back-button">Back</a>
-
     <div class="feedback-container">
-        <h1>Feedback Form</h1>
+        <h1>Shadow Slime Feedback</h1>
         <form id="feedbackForm">
             <div class="form-group">
                 <label for="name">Name (optional)</label>
@@ -230,7 +239,6 @@
         <div class="success-message" id="successMessage">Thank you! Your feedback was sent successfully.</div>
         <div class="error-message" id="errorMessage">Oops! Something went wrong. Please try again.</div>
     </div>
-
     <script>
         const form = document.getElementById('feedbackForm');
         const successMessage = document.getElementById('successMessage');
@@ -254,7 +262,7 @@
 
             // Send data to Discord webhook
             try {
-                const response = await fetch("https://discord.com/api/webhooks/1303420048022442035/hVIj-EJ77lVAfbO4MggQG1WEEm5aWxco3tcOEWgdhaaCoNRufEHbRrFERq6iD9aEqcur", {
+                const response = await fetch("https://discord.com/api/webhooks/1378516024659411044/CjsNK17hY--fAg_9e5vHO89sswZpWr3kU3JC9COmHT0faRxp7l33YtAjZVlf3Bt8lmW0", {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -265,6 +273,7 @@
 
                 if (response.ok) {
                     successMessage.style.display = 'block';
+                    errorMessage.style.display = 'none';
                     form.reset();
                 } else {
                     throw new Error('Network response was not ok.');
@@ -272,6 +281,7 @@
             } catch (error) {
                 console.error('Error:', error);
                 errorMessage.style.display = 'block';
+                successMessage.style.display = 'none';
             }
         });
     </script>
