--- a/Homework/index.html
+++ b/Homework/index.html
@@ -55,7 +55,7 @@
     <header>
       <div class="logo">S</div>
       <div>
-        <h1>Roblox Studio Homework</h1>
+        <h1>Roblox Studio Exam 1</h1>
         <p class="lead">Enter your name, solve, then submit. Answers are marked by shadow.</p>
       </div>
     </header>
@@ -88,25 +88,96 @@
 /* =======================
    CONFIG: edit here
    ======================= */
-const WEBHOOK_URL = "https://discord.com/api/webhooks/1404795054001754165/1RuZsnoXVMybEO4tRaohHV0nICRhPhYsiIoaOwtFeX6cYbUFBBw_o3zuY2v1N_6f8rHS"; // <-- replace with your webhook or paste it in the top input
+const WEBHOOK_URL = "https://discord.com/api/webhooks/1404839339887693975/zQ9WqSpxF_9hznhVMnEmznJlga6lTLWPur_y3qcQn8n_C-lHEKC21vB0MljrKSe3Tmg1"; // <-- replace with your webhook or paste it in the top input
 // Embedded questions data. Edit / add entries here.
 const questionsData = {
   "questions": [
     {
       "id": 1,
-      "type": "mcq",
-      "text": "Test multiple choice question",
-      "options": ["Option A", "Option B", "Option C", "Option D"]
+      "type": "truefalse",
+      "text": "In Roblox Studio, you can turn multiple selected parts into a single model."
     },
     {
       "id": 2,
       "type": "truefalse",
-      "text": "Test true or false question"
+      "text": "Using 'Union' on two parts will permanently combine them without any way to separate them."
     },
     {
       "id": 3,
+      "type": "truefalse",
+      "text": "Changing a part's BrickColor will also automatically change its Material."
+    },
+    {
+      "id": 4,
+      "type": "truefalse",
+      "text": "You can add decals to parts by dragging them from the Toolbox."
+    },
+    {
+      "id": 5,
+      "type": "truefalse",
+      "text": "Holding Shift while moving an object in Roblox Studio disables snapping for smooth movement."
+    },
+
+    // --- Multiple Choice (8) ---
+    {
+      "id": 6,
+      "type": "mcq",
+      "text": "Which tool would you use to change a part’s size?",
+      "options": ["Select Tool", "Move Tool", "Resize Tool", "Rotate Tool"]
+    },
+    {
+      "id": 7,
+      "type": "mcq",
+      "text": "Which union operation removes the overlapping area of two parts?",
+      "options": ["Union", "Separate", "Negate", "Intersect"]
+    },
+    {
+      "id": 8,
+      "type": "mcq",
+      "text": "What property would you adjust to make a part more see-through?",
+      "options": ["Reflectance", "Transparency", "Material", "BrickColor"]
+    },
+    {
+      "id": 9,
+      "type": "mcq",
+      "text": "Which of these is NOT a light type in Roblox Studio?",
+      "options": ["SpotLight", "SurfaceLight", "PointLight", "AreaLight"]
+    },
+    {
+      "id": 10,
+      "type": "mcq",
+      "text": "Where can you drag a decal from to apply it to a part?",
+      "options": ["Properties Panel", "Lighting Service", "Toolbox", "Terrain Editor"]
+    },
+    {
+      "id": 11,
+      "type": "mcq",
+      "text": "What property would you change to make a part cast no shadow?",
+      "options": ["Anchored", "CastShadow", "CanCollide", "Material"]
+    },
+    {
+      "id": 12,
+      "type": "mcq",
+      "text": "Which tool allows you to precisely line up multiple objects?",
+      "options": ["Rotate Tool", "Object Aligner", "Union Tool", "Material Tool"]
+    },
+    {
+      "id": 13,
+      "type": "mcq",
+      "text": "What effect would you add to make a campfire look realistic?",
+      "options": ["Smoke", "Fire", "Sparkles", "Beam"]
+    },
+
+    // --- Complete (2) ---
+    {
+      "id": 14,
       "type": "code",
-      "text": "Test code question"
+      "text": "Complete: To create a smooth movement without snapping, hold ______ while moving an object."
+    },
+    {
+      "id": 15,
+      "type": "code",
+      "text": "Complete: The three main tools for adjusting a part’s position, size, and angle are Move, Resize, and ______."
     }
   ]
 };
@@ -270,7 +341,7 @@ function initMonacoForQuestions(codeQuestions) {
 function buildDiscordMessage(answers, questions) {
   // answers: { qid: {type, value, rawSelectedIndex?} ... }
   const lines = [];
-  lines.push('📚 **Homework Submission**');
+  lines.push('📚 **Exam Submission**');
   lines.push(`**Name:** ${answers.__name || 'Unknown'}`);
   lines.push(`**Time (UTC):** ${new Date().toISOString()}`);
   lines.push(''); // blank
@@ -297,8 +368,12 @@ function buildDiscordMessage(answers, questions) {
     } else if(q.type === 'truefalse') {
       lines.push(`---\nquestion id {${q.id}} -- true or false`);
       lines.push(q.text);
-      const val = (qans.value === 'true' || qans.value === 'True' || qans.value === true);
-      lines.push(`answer: ${val ? '✅' : '❌'}`);
+      if (qans.value === null || qans.value === undefined || qans.value === '') {
+        lines.push('_No answer provided_');
+      } else {
+        const val = (qans.value === 'true' || qans.value === 'True' || qans.value === true);
+        lines.push(`answer: ${val ? '✅' : '❌'}`);
+      }
       lines.push('');
     } else if(q.type === 'code') {
       lines.push(`---\nquestion id {${q.id}} -- code`);
@@ -344,23 +419,83 @@ function collectAnswers(questions) {
   return out;
 }
 
-/* Send to discord webhook */
+/* Helper: Split a long string into chunks <=2000 chars, keeping code blocks (triple backticks) together */
+function splitMessage(str, maxLen = 2000) {
+  const lines = str.split('\n');
+  const chunks = [];
+  let current = '';
+  let inCodeBlock = false;
+  let codeBlockBuffer = '';
+  for (let i = 0; i < lines.length; i++) {
+    const line = lines[i];
+    const isCodeFence = line.trim().startsWith('```');
+    if (isCodeFence) {
+      inCodeBlock = !inCodeBlock;
+      // If ending a code block, flush buffer
+      if (!inCodeBlock) {
+        codeBlockBuffer += line + '\n';
+        // If code block is too big, still send as one chunk (Discord will truncate, but formatting is preserved)
+        if (codeBlockBuffer.length > maxLen) {
+          chunks.push(codeBlockBuffer);
+        } else {
+          // Try to append to current chunk if it fits
+          if ((current.length + codeBlockBuffer.length) > maxLen) {
+            if (current.length > 0) chunks.push(current);
+            current = codeBlockBuffer;
+          } else {
+            current += codeBlockBuffer;
+          }
+        }
+        codeBlockBuffer = '';
+      } else {
+        // Starting a code block, flush current chunk if needed
+        if (current.length > 0) {
+          chunks.push(current);
+          current = '';
+        }
+        codeBlockBuffer = line + '\n';
+      }
+    } else if (inCodeBlock) {
+      codeBlockBuffer += line + '\n';
+    } else {
+      // Not in code block
+      if ((current + line + '\n').length > maxLen) {
+        if (current.length > 0) chunks.push(current);
+        current = line + '\n';
+      } else {
+        current += line + '\n';
+      }
+    }
+  }
+  // Flush any remaining code block buffer (if unclosed)
+  if (codeBlockBuffer.length > 0) {
+    chunks.push(codeBlockBuffer);
+  }
+  if (current.length > 0) chunks.push(current);
+  return chunks;
+}
+
+/* Send to discord webhook, splitting if needed */
 async function sendToDiscord(webhookURL, messageContent) {
   if(!webhookURL) throw new Error('Missing webhook URL');
-  // Discord webhook expects { content: "text" } or embeds
-  const payload = {
-    content: messageContent
-  };
-  const res = await fetch(webhookURL, {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(payload)
-  });
-  if(!res.ok) {
-    const text = await res.text().catch(()=>'<no body>');
-    throw new Error(`Discord responded ${res.status}: ${text}`);
+  const parts = splitMessage(messageContent, 2000);
+  let lastRes = null;
+  for (let i = 0; i < parts.length; i++) {
+    const payload = { content: parts[i] };
+    const res = await fetch(webhookURL, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(payload)
+    });
+    if(!res.ok) {
+      const text = await res.text().catch(()=>'<no body>');
+      throw new Error(`Discord responded ${res.status}: ${text}`);
+    }
+    lastRes = res;
+    // Optionally, add a small delay between messages to avoid rate limits
+    if (i < parts.length - 1) await new Promise(r => setTimeout(r, 500));
   }
-  return res;
+  return lastRes;
 }
 
 /* UI actions */
@@ -371,7 +506,7 @@ $('submitBtn').addEventListener('click', async () => {
     return;
   }
   const name = (nameInput.value || '').trim();
-  if(!name) { alert('Imagine submitting your homework without Putting your name idiot.'); nameInput.focus(); return; }
+  if(!name) { alert('Imagine submitting your Exam without Putting your name idiot.'); nameInput.focus(); return; }
 
   const qList = (exampleSelect.value === 'external' ? (window.externalQuestions || questionsData.questions) : questionsData.questions);
   setStatus('Collecting answers...');
